# snow-shot

./: .prettierignore  .prettierrc.cjs  LICENSE-Commercial  LICENSE-NonCommercial  README.md  app-icon.psd  eslint.config.mjs  package.json  pnpm-lock.yaml  snow-shot-tray.psd  tsconfig.json
.github/ISSUE_TEMPLATE/: 1_feature_request.yml  2_bug_report.yml
docs/: development.md  macos-permissions.md
src/: global.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json  drag.json  file.json
src-tauri/icons/: icon.icns
src-tauri/infoplist/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: app_error.rs  app_log.rs  core.rs  file.rs  lib.rs  listen_key.rs  main.rs  ocr.rs  screenshot.rs  scroll_screenshot.rs  video_record.rs
src-tauri/src-crates/app-os/: Cargo.toml
src-tauri/src-crates/app-os/src/: lib.rs
src-tauri/src-crates/app-os/src/notification/: linux.rs  macos.rs  windows.rs
src-tauri/src-crates/app-os/src/ui_automation/: linux.rs  macos.rs  windows.rs
src-tauri/src-crates/app-os/src/utils/: linux.rs  macos.rs  windows.rs
src-tauri/src-crates/app-scroll-screenshot-service/: Cargo.toml
src-tauri/src-crates/app-scroll-screenshot-service/src/: lib.rs  scroll_screenshot_capture_service.rs  scroll_screenshot_image_service.rs  scroll_screenshot_service.rs
src-tauri/src-crates/app-services/: Cargo.toml
src-tauri/src-crates/app-services/src/: device_event_handler_service.rs  file_cache_service.rs  free_drag_window_service.rs  lib.rs  listen_key_service.rs  ocr_service.rs  video_record_service.rs
src-tauri/src-crates/app-shared/: Cargo.toml
src-tauri/src-crates/app-shared/src/: lib.rs
src-tauri/src-crates/app-utils/: Cargo.toml
src-tauri/src-crates/app-utils/src/: lib.rs  monitor_info.rs
src-tauri/src-crates/tauri-commands/core/: Cargo.toml
src-tauri/src-crates/tauri-commands/core/src/: lib.rs
src-tauri/src-crates/tauri-commands/file/: Cargo.toml
src-tauri/src-crates/tauri-commands/file/src/: lib.rs
src-tauri/src-crates/tauri-commands/ocr/: Cargo.toml
src-tauri/src-crates/tauri-commands/ocr/src/: lib.rs
src-tauri/src-crates/tauri-commands/screenshot/: Cargo.toml
src-tauri/src-crates/tauri-commands/screenshot/src/: lib.rs
src-tauri/src-crates/tauri-commands/scroll-screenshot/: Cargo.toml
src-tauri/src-crates/tauri-commands/scroll-screenshot/src/: lib.rs
src-tauri/src/app_utils/: mod.rs
src-tauri/src/os/: linux.rs  mod.rs  windows.rs
src-tauri/src/os/free_drag/: linux.rs  windows.rs
src-tauri/src/os/notification/: macos.rs
src-tauri/src/os/ui_automation/: macos.rs  windows.rs
src-tauri/src/os/utils/: windows.rs
src-tauri/src/services/: free_drag_window_service.rs  mod.rs  scroll_screenshot_image_service.rs  scroll_screenshot_service.rs  video_record_service.rs
src/app/: contextWrap.tsx  extra.tsx  globals.css  layout.tsx  menuLayout.tsx  page.tsx  trayIcon.tsx
src/app/about/: page.tsx
src/app/components/: globalEventHandler.tsx  pageNav.tsx
src/app/draw/: actions.ts  context.tsx  extra.ts  page.module.css  page.tsx  types.ts
src/app/draw/components/: toolbarTip.tsx
src/app/draw/components/baseLayer/: actions.ts  baseLayerRenderActions.ts  index.module.css  index.tsx
src/app/draw/components/blurImageLayer/: index.tsx
src/app/draw/components/captureHistory/: index.tsx
src/app/draw/components/captureImageLayer/: index.tsx
src/app/draw/components/colorPicker/: actions.ts  extra.tsx  index.tsx  renderActions.ts
src/app/draw_old/: page.tsx  types.ts
src/app/fixedContent/: page.tsx
src/app/fullScreenDraw/: extra.tsx  page.tsx
src/app/fullScreenDraw/switchMouseThrough/: page.tsx
src/app/settings/: page.tsx
src/app/settings/functionSettings/: extra.ts  page.tsx
src/app/settings/generalSettings/: page.tsx
src/app/settings/hotKeySettings/: page.tsx
src/app/settings/systemSettings/: page.tsx
src/app/tools/chat/: page.tsx  types.ts
src/app/tools/translation/: extra.ts  page.tsx
src/app/videoRecord/: extra.ts  page.tsx
src/app/videoRecord/toolbar/: page.tsx
src/commands/: core.ts  file.ts  index.ts  listenKey.ts  ocr.ts  screenshot.ts  scrollScreenshot.ts  videoRecord.ts
src/components/: toolbarTip.tsx
src/components/checkPermissions/: index.tsx
src/components/checkVersion/: index.tsx
src/components/contentWrap/: index.tsx
src/components/directoryInput/: index.tsx
src/components/eventListener/: index.tsx
src/components/functionButton/: index.tsx
src/components/globalLayoutExtra/: index.tsx
src/components/globalShortcut/: index.tsx
src/components/globalShortcut/components/: changeDelaySeconds.tsx
src/components/groupTitle/: index.tsx
src/components/hotkeysMenu/: index.tsx
src/components/iconLable/: index.tsx
src/components/icons/: index.tsx
src/components/initService/: index.tsx
src/components/keyButton/: index.tsx
src/components/pathInput/: index.tsx
src/components/resetSettingsButton/: index.tsx
src/components/scrollShadow/: index.tsx
src/components/translator/: index.tsx
src/core/canvas/: canvasDraw.ts  canvasDrawArrow.ts  canvasDrawPen.ts  canvasDrawShape.ts  canvasHistory.ts
src/core/chaikin/: index.ts
src/core/hotKeys/: index.tsx
src/functions/: fixedContent.ts  fullScreenDraw.ts  ocr.ts  screenshot.ts  sendMessage.ts  tools.ts  videoRecord.ts
src/hooks/: useAppSettingsLoad.tsx  useCallbackRender.tsx  useHotkeysApp.tsx  usePlatform.tsx  useStatePublisher.tsx  useStateRef.tsx  useStateRender.tsx  useStateSubscriber.tsx  useTempInfo.tsx  useTextScaleFactor.tsx
src/messages/: en.ts  map.ts  zhHant.ts
src/messages/zhHans/: about.ts  common.ts  draw.ts  fullScreenDraw.ts  home.ts  index.ts  menu.ts  settings.ts  tools.ts  videoRecord.ts
src/services/tools/: chat.ts  index.ts  translation.ts
src/utils/: appLog.ts  appStore.ts  audio.ts  captureHistory.ts  clipboard.ts  excalidraw.ts  fabricjsHistory.ts  file.ts  format.ts  index.ts  log.ts  mousePosition.ts  tweenAnimation.ts  window.ts  zIndex.ts
(+142 files in other folders)
