[workspace]
members = [
    "src-crates/app-services",
    "src-crates/app-os",
    "src-crates/app-shared",
    "src-crates/app-utils",
]

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["mg-chao <chao@mgchao.top>"]
repository = "https://github.com/mg-chao/snow-shot"
edition = "2024"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[workspace.dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
# xcap = { git = "https://github.com/mg-chao/xcap", branch = "custom/master" }
xcap = { git = "https://github.com/mg-chao/xcap", branch = "20250710_fix_macos" }
# device_query = "4.0.0"
device_query = { git = "https://github.com/mg-chao/device_query", branch = "20250703_fix_index_out" }
log = "^0.4"
image = { version = "^0.25", features = ["png", "webp"] }
imageproc = "^0.25"
enigo = "^0.5"
tokio = "^1.45"
tauri = { version = "^2", features = [
    "protocol-asset",
    "macos-private-api",
    "tray-icon",
    "devtools",
    "image-ico",
    "image-png",
] }
rayon = "^1.10"
regex = "^1.11"
zune-jpegxl = "^0.4"
zune-core = "^0.4"

[dependencies]
# 项目内依赖
snow-shot-app-services = { path = "src-crates/app-services" }
snow-shot-app-os = { path = "src-crates/app-os" }
snow-shot-app-utils = { path = "src-crates/app-utils" }

# workspace 依赖
serde_json = { workspace = true }
serde = { workspace = true }
xcap = { workspace = true }
device_query = { workspace = true }
log = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
enigo = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
zune-jpegxl = { workspace = true }
zune-core = { workspace = true }

# tauri 相关
tauri = { workspace = true }
tauri-plugin-log = "^2"
tauri-plugin-fs = "^2"
tauri-plugin-dialog = "^2"
tauri-plugin-http = "^2"
tauri-plugin-store = "^2"
tauri-plugin-clipboard-manager = "^2"
tauri-plugin-opener = "^2"
tauri-plugin-clipboard = "^2"
tauri-plugin-process = "^2"
tauri-plugin-notification = "^2"
tauri-plugin-os = "^2"

# 其他依赖
paddle-ocr-rs = "0.5.2"
# paddle-ocr-rs = { git = "https://github.com/mg-chao/paddle-ocr-rs.git", branch = "main" }
num_cpus = "^1.16"

base64 = "^0.22"
bytemuck = "^1.23"
get-selected-text = "^0.1"
clipboard-rs = "^0.3"

[target.'cfg(any(target_os = "windows"))'.dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "UI_UIAutomation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "UI_Notifications",
    "Data_Xml_Dom",
    "Foundation",
    "ApplicationModel_Core",
    "Win32_System_Com",
    "Win32_System_WinRT",
] }
uiautomation = "0.22.0"

[target.'cfg(any(target_os = "macos"))'.dependencies]
scap = { git = "https://github.com/mg-chao/scap", branch = "20250712_custom" }
core-graphics-helmer-fork = "0.24.0"
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "^2"
tauri-plugin-single-instance = "2"

[profile.dev]
opt-level = 1
