[package]
name = "snow-shot-app-services"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
tauri = { workspace = true }
device_query = { workspace = true }
regex = { workspace = true }
log = { workspace = true }

ffmpeg-sidecar = "^2.0.6"

[target.'cfg(any(target_os = "macos"))'.dependencies]
xcap = { workspace = true }
