[package]
name = "snow-shot-app-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
xcap = { workspace = true }
tauri = { workspace = true }
zune-jpegxl = { workspace = true }
zune-core = { workspace = true }
device_query = { workspace = true }
image = { workspace = true }
log = { workspace = true }