[package]
name = "snow-shot-app-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
xcap = { workspace = true }
tauri = { workspace = true }
zune-jpegxl = { workspace = true }
zune-core = { workspace = true }
device_query = { workspace = true }
image = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
snow-shot-app-shared = { workspace = true }
tokio = { workspace = true }

[target.'cfg(any(target_os = "macos"))'.dependencies]
scap = { workspace = true }
objc2 = { workspace = true }
core-graphics-helmer-fork = "0.24.0"
macos-accessibility-client = { workspace = true }

[target.'cfg(any(target_os = "windows"))'.dependencies]
windows = { version = "0.62.0", features = ["Win32_UI_Magnification"] }
